<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/main_color"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/search"
                android:drawableEnd="@drawable/microphone"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/searchmove"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/moviemonth"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <ImageView
                android:id="@+id/notebook"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/movieofthemonth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bestmovies"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"

                />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovieLists"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/popular"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieLists1"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>